# python-mini-project

./: .gitignore  README.md  WEB_APP_GUIDE.md  error_logger.py  main.py  package-lock.json  projects_registry.json  pyproject.toml  pytest.ini  requirements.txt  search_projects.py  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: project_proposal.md
.github/workflows/: pr-merged-thanks.yml
games/2048-Game/: 2048-Game.py
games/Emoji-Memory-Game/: Emoji-Memory-Game.py
games/Hangman-Game/: Hangman-Game.py
games/Math-Quiz/: Math-Quiz.py
games/Minesweeper/: minesweeper.py
games/Number-Sliding-Puzzle/: Number-Sliding-Puzzle.py
games/Password-Forge/: Password-Forge.py
games/Pygame-Chess/: Readme.md  ai.py  board.py  input_handler.py  loader.py  main.py  renderer.py  requirements.txt
games/Simon-Says/: Simon-Says.py
games/Snake-Game/: Snake-Game.py
games/Sudoku-Game/: Sudoku-Game.py
games/Tic-Tac-Toe/: Tic-Tac-Toe.py
games/Whack-a-Mole/: Whack-a-Mole.py
games/Word-Building/: data.py  word_building.py
games/Word-Scramble-Game/: Word-Scramble-Game.py
math/: README.md
security/: tar_safe.py
tests/: test_emoji_memory_game.py  test_error_logger.py  test_merge_sort.py  test_security.py  test_smoke.py  test_sudoku_game.py
utils/: __init__.py  banners.py  validation.py
web-app/: 404.html  debug.js  faq.html  games.html  generate_banners.py  index.html  math.html  package-lock.json  package.json  privacy-policy.html  projects_registry.json  terms-condition.html  test-focus.js  test-modal.js  utilities.html
(+58 files in other folders)
